fix(sitetable): remove hidden overflow for last-visited links shoutouts to kel diobrando and /u/anoddname

--- a/style/main.css
+++ b/style/main.css
@@ -1981,6 +1981,7 @@ h6,
 }
 
 .link.last-clicked {
+  overflow: visible;
   border-top-style: none;
   border-right-style: none;
   border-left-style: none;
